# rf2_video_settings

./: .gitignore  Pipfile  ReadMe.md  Terms.md  app.py  app.spec  build.py  license.txt  pack.py  pyproject.toml  rf2_settings_wizard_win64_setup.iss  run.py  setup.py  web.py  webmethods.py
data/: gfx_Defaults.json  patched_eel_v0182.js
data/reshade_openxr_layer/: ReShadeApps.ini
default_presets/: High.json  Ultra.json  VR-High.json  VR-Low.json  VR-Medium.json
hooks/: hook-googleapiclient.py  hook-pygame.py
modules/: __init__.py  app_settings.py  benchmark.py  globals.py  preset.py  process.py  rfactor.py  settings_model.py  steam_utils.py  utils.py  web.py
open_vr_mod/: app_fn.py  app_main.py  globals.py
open_vr_mod/cfg/: base_mod_cfg.py  cfg_file_handler.py  foveated_cfg.py
open_vr_mod/mod/: base_mod.py  foveated_mod.py  fsr_mod.py
open_vr_mod/util/: utils.py
open_vr_mod/valve/: steam.py
private/: updater.py
rf2settings/: __init__.py  app_graphics.py  app_main.py  app_multiplayer.py  app_settings.py  benchmark.py  directInputKeySend.py  gamecontroller.py  globals.py  headlights.py  log.py  preset.py  presets_dir.py  requests.py  rf2benchmark.py  rf2benchmarkutils.py  rf2command.py  rf2connect.py  rf2events.py  rf2greenlet.py  rf2lights.py  rf2webui.py  rfactor.py  serverlist.py  settings_model.py  utils.py  vrtoolkit.py
rf2settings/app/: __init__.py  app_audio.py  app_benchmark.py  app_benchmark_fn.py  app_chat.py  app_chat_fn.py  app_content.py  app_content_fn.py  app_controller.py  app_controller_fn.py  app_dashboard.py  app_dashboard_fn.py  app_graphics.py  app_graphics_fn.py  app_headlights.py  app_main.py  app_main_fn.py  app_multiplayer.py  app_multiplayer_fn.py  app_presets.py  app_presets_fn.py  app_replays.py  app_rfconnect.py  app_rfconnect_fn.py
rf2settings/benchmark/: README.md  benchmark.py  benchmark_utils.py  fpsvr.py  fpsvr_result.py  result.py
rf2settings/chat/: send_chat.py  youtube.py  ytgreenlet.py
rf2settings/default_presets/: High.json  Ultra.json  VR-High.json  VR-MedSharp.json  VR-Medium.json  gfx_High.json  gfx_Ultra.json  gfx_VR-G2.json  gfx_VR-High.json  gfx_VR-Low.json  gfx_VR-MedSharp.json  gfx_VR-Medium.json  gfx_VR-Sharp.json  race_session_BenchmarkDefaults.json
rf2settings/mods/: open_vr.py  rf2lights.py  vrtoolkit.py
rf2settings/preset/: preset.py  preset_base.py  presets_dir.py  settings_model.py  settings_model_base.py
rf2settings/rf2sharedmem/: rF2data.py  sharedMemoryAPI.py
rf2settings/settingsdef/: controls.py  generic.py  graphics.py  headlights.py
rf2settings/valve/: __init__.py  a2s.py  master_server.py  messages.py  steam_utils.py
scripts/: app.py  build.py  pack.py  patch_sdl_pygame.py
src/open_vr_mod/: __init__.py  app_fn.py  app_settings.py  globals.py  log.py
src/rf2settings/: app_settings.py  app_updater.py  eel_mod.py  globals.py  log.py  process.py  requests.py  rf2events.py  rf2greenlet.py  rf2replays.py  rf2results.py  rfactor.py  serverlist.py  utils.py
tests/: test_steam_webapi.py  test_yt_chat.py
vue/: .env  .env.development  .env.production  eslint.config.js  index.html  package-lock.json  package.json  vite.config.js  vue.config.js
vue/public/: index.html  index_dev.html
vue/src/: App.vue  fuelData.js  main.js
(+117 files in other folders)
