[tool.poetry]
name = "rf2-settings-widget"
version = "1.5.0"
description = ""
authors = ["Stefan Tapper <tapper.stefan@gmail.com>"]
readme = "README.md"
packages = [{include = "rf_video_settings"}]


[tool.poetry.dependencies]
python = ">=3.8,<3.12"
eel = "^0.16"
bottle = {file = "./local_pkgs/bottle-0.13.dev0.tar.gz"}
appdirs = "^1.4.4"
pygame = "==2.1.2"
python-a2s = "^1.3.0"
psutil = "^5.9.3"
google-api-python-client = "^2.65.0"
gevent = "==22.10.1"
gevent-websocket = "==0.10.1"


[tool.poetry.group.dev.dependencies]
pyinstaller = "^5.8.0"
pyinstaller-hooks-contrib = ">=2021.4"
pywin32-ctypes = ">=0.2.0"


[tool.poetry.group.openvr.dependencies]
ruamel-yaml = "^0.17.21"


[tool.poetry.group.youtube.dependencies]
google-auth-oauthlib = "^0.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
