[project]
name = "rf2-settings-widget"
version = "1.7.0"
description = ""
authors = [{ name = "Stefan Tapper", email = "tapper.stefan@gmail.com" }, ]
readme = "README.md"
packages = [{ include = "rf2settings", from = "src" }]
requires-python = ">=3.11,<3.12"

dependencies = [
    "eel==0.18.2",
    "bottle==0.13.4",
    "appdirs>=1.4.4, <2.0.0",
    "pygame==2.6.1",
    "python-a2s==1.4.1",
    "psutil==7.2.2",
    "gevent==25.9.1",
    "gevent-websocket==0.10.1",
    "lxml==6.0.2",
    "google-api-python-client>=2.108.0",
    "google-auth-oauthlib==1.3.1",
    "ruamel-yaml>=0.17.21",
    "pyinstaller-hooks-contrib==2026.4",
    "ruff==0.15.9",
]

[dependency-groups]
dev = [
    "ruff>=0.15.7",
    "pyinstaller>=6.19.0, <7.0.0",
    "pyinstaller-hooks-contrib>=2026.3",
    "pywin32-ctypes>=0.2.0",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/lmu"]

[tool.hatch.build.targets.sdist]
include = [
    "/data",
    "/bin",
    "/scripts",
    "/src",
    "/vue",
    "/tests",
    "/pyproject.toml",
    "/ReadMe.md",
    "/license.txt", # Beispiel
]

[tool.pytest.ini_options]
log_cli = "True"
log_cli_level = "INFO"
testpaths = [
    "tests",
]
